--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Pradeep Pandey",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.21.2",
     "socket.io": "^4.8.1"
   }
 }
