--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "api/index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "node api/index.js",
+    "test": "nodemon index.js"
   },
   "keywords": [],
   "author": "Pradeep Pandey",
